[package]
name = "webpagev2"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
rustls = "0.23.37"
rustls-aws-lc-rs = "0.0.1"
rustls-util = "0.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio-rustls = "0.26.4"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.1"
